# httpd-echo

./: .gitignore  MANIFEST.in  Makefile  README.rst  httpdecho.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: pylint.yml  python-app.yml
