[metadata]
name = httpdecho
version = attr: httpdecho.__version__
description = A Simple Python HTTP server that echos the request in the response
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = httpd, http, echo, server
author = Ross Patterson
author_email = me@rpatterson.net
maintainer = Doncho N. Gunchev
maintainer_email = dgunchev@gmail.com
url = https://github.com/mr700/httpd-echo
license = GPL
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Utilities


[options]
zip_safe = False
python_requires = >= 3.6
py_modules = httpdecho
include_package_data = True

setup_requires =
    setuptools>=41.0

tests_require =
    requests
    coverage
    pytest


[options.entry_points]
console_scripts =
    httpd-echo = httpdecho:main


[bdist_wheel]
universal = true


[options.package_data]
* = *.rst


# python setup.py sdist
[sdist]
# formats = zip,gztar,bztar,xztar
formats = zip,xztar


[coverage:run]
branch = true
concurrency = thread


[coverage:report]
# Regexes for lines to exclude from consideration
show_missing = true
skip_covered = false
skip_empty = true
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    return NotImplemented

    # Don't complain if non-runnable code isn't run:
    if 0:
    if False:
    if __name__ == .__main__.:
    if typing.TYPE_CHECKING:

    # Don't complain about abstract methods, they aren't run:
    @(abc\.)?abstractmethod
    @(abc\.)?abstractproperty

    # Multiple library version support
    except ImportError


[coverage:html]
directory = htmlcov


[coverage:paths]
source =
    ./
